tests/agl/rejections/type/def_uninferable_return_type.agl
def fail() = raise Abort(message = "x")
